[gd_scene load_steps=9 format=3 uid="uid://bbjmdjgfsctma"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_a6bjo"]
[ext_resource type="Script" path="res://scripts/settings.gd" id="2_yf41e"]
[ext_resource type="Script" path="res://scripts/tabs/tabs.gd" id="3_gskb4"]
[ext_resource type="Texture2D" uid="uid://b7sj3d3s60qpv" path="res://assets/textures/ui/configs/new.svg" id="4_lhuin"]
[ext_resource type="Texture2D" uid="uid://cvxvwm31h44ru" path="res://assets/textures/ui/configs/edit.svg" id="5_mkjoc"]
[ext_resource type="Texture2D" uid="uid://dm0qwca4wy7cw" path="res://assets/textures/ui/configs/delete.svg" id="6_wcoc4"]
[ext_resource type="Script" path="res://scripts/tabs/configs/config_list.gd" id="7_fip5f"]
[ext_resource type="Texture2D" uid="uid://vlddtdgcrty0" path="res://assets/textures/icon.png" id="8_o6fyl"]

[node name="Main" type="Node"]
script = ExtResource("1_a6bjo")

[node name="Settings" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_yf41e")

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="Canvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tabs" type="TabContainer" parent="Canvas/PanelContainer"]
layout_mode = 2
current_tab = 0
script = ExtResource("3_gskb4")

[node name="Configs" type="Control" parent="Canvas/PanelContainer/Tabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Canvas/PanelContainer/Tabs/Configs"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas/PanelContainer/Tabs/Configs/MarginContainer"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Canvas/PanelContainer/Tabs/Configs/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NewButton" type="Button" parent="Canvas/PanelContainer/Tabs/Configs/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_constants/icon_max_width = 20
theme_override_font_sizes/font_size = 14
text = "New..."
icon = ExtResource("4_lhuin")

[node name="EditButton" type="Button" parent="Canvas/PanelContainer/Tabs/Configs/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_constants/icon_max_width = 20
theme_override_font_sizes/font_size = 14
disabled = true
text = "Edit"
icon = ExtResource("5_mkjoc")

[node name="DeleteButton" type="Button" parent="Canvas/PanelContainer/Tabs/Configs/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_constants/icon_max_width = 20
theme_override_font_sizes/font_size = 14
disabled = true
text = "Delete"
icon = ExtResource("6_wcoc4")

[node name="ConfigList" type="ItemList" parent="Canvas/PanelContainer/Tabs/Configs/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("7_fip5f")

[node name="Editor" type="Control" parent="Canvas/PanelContainer/Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="About" type="Control" parent="Canvas/PanelContainer/Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas/PanelContainer/Tabs/About"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -13.0
offset_right = 65.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="Canvas/PanelContainer/Tabs/About/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("8_o6fyl")
expand_mode = 1
stretch_mode = 5

[node name="AppNameLabel" type="Label" parent="Canvas/PanelContainer/Tabs/About/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "JoyShockGraphic"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="Canvas/PanelContainer/Tabs/About/VBoxContainer"]
layout_mode = 2
text = "JoyShockGraphic is a GUI configurator for JoyShockMapper."

[node name="JsmPathDialog" type="FileDialog" parent="."]
title = "Open a Directory"
position = Vector2i(0, 36)
size = Vector2i(359, 211)
popup_window = true
ok_button_text = "Select Current Folder"
mode_overrides_title = false
file_mode = 2
access = 2
use_native_dialog = true

[connection signal="jsm_path_set" from="." to="Canvas/PanelContainer/Tabs/Configs/MarginContainer/VBoxContainer/ConfigList" method="_on_jsm_path_set"]
[connection signal="dir_selected" from="JsmPathDialog" to="." method="_on_path_selected"]
